Add landing page template

--- a/Ticketing/Views/Home/Index.cshtml
+++ b/Ticketing/Views/Home/Index.cshtml
@@ -1,5 +1,103 @@
-﻿
-    <div>
-        Site Index
+﻿<div class="container">
+
+    <!-- 1st section -->
+    <section class="row tm-section">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+            <div class="tm-flex-center p-5 tm-bg-color-primary tm-section-min-h">
+                <h1 class="tm-text-color-white tm-site-name">Magazee</h1>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+            <div class="tm-flex-center p-5">
+                <q class="tm-quote tm-text-color-gray">Ut sit amet augue elit. Vivamus eget tortor in ante scelerisque gravida. Vestibulum auctor condimentum sem.</q>
+            </div>
+        </div>
+    </section>
+
+    <!-- 2nd section -->
+    <section class="row tm-section tm-col-md-reverse">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+            <div class="tm-flex-center p-5">
+                <div class="tm-md-flex-center">
+                    <h2 class="tm-text-color-primary mb-4">Fusce ac enim at justo</h2>
+                    <p class="mb-4">Pellentesque sagittis feugiat massa, vitae blandit elit dictum in. Nam eleifend nunc dui, sed cusus justo molestie id. Vestibulum vel sagittis justo.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
+            <div class="tm-flex-center p-5 tm-bg-color-primary">
+                <div class="tm-max-w-400 tm-flex-center tm-flex-col">
+                    <img src="img/image-04.jpg" alt="Image" class="rounded-circle mb-4">
+                    <p class="tm-text-color-white small tm-font-thin mb-0">Nullam eleifend, ipsum eu aliquet fermentum , odio urna dignissim ante, semper maximus libero nisl non nibh.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 3rd Section -->
+    <section class="row tm-section tm-mb-30">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0 text-center">
+            <img src="img/image-01.jpg" alt="Image" class="img-fluid">
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+            <div class="tm-flex-center p-5">
+                <div class="tm-flex-center tm-flex-col">
+                    <h2 class="tm-align-left">Loerm ipsum dolor sit amet</h2>
+                    <p>This is one-page HTML5 template that you can use for any purpose. Please tell your friends about <a href="https://www.facebook.com/templatemo" target="_parent">TemplateMo</a> website. Thank you.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 4th Section -->
+    <section class="row tm-section tm-mb-30">
+        <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
+            <div class="tm-flex-center pl-5 pr-5 pt-5 pb-5">
+                <div class="tm-md-flex-center">
+                    <h2 class="mb-4 tm-text-color-primary">Nullam auctor ornare finibus</h2>
+                    <p>Cras eu dolor lorem. Cras justo mauris, rhoncus in mauris ac, pellentesque pulvinar metus. Suspendisse consectetur consequat diam, ac dignissim mauris gravida vitae. Vestibulum blandit vestibulum mi a viverra.</p>
+                    <p class="mb-4">Fusce porta lectus vel elit condimentum porttitor. Maecenas at quam congue, sollicitudin risus quis, ultricies enim. Vivamus sodales, tellus ac quismod dignissim, metus ligula porttitor enim.</p>
+                    <p class="mb-4">Sed fermentum odio mollis libero iaculis ultrices. Mauris et nibh mi. Nullam vel sapien dolor. Vestibulum ipsum quam, aliquet ac pharetra in, suscipit eu risus. Etiam rutrum eros ultrices, consectetur felis ultrices, vehicula purus.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 text-xl-right text-md-center text-center mt-5 mt-lg-0 pr-lg-0">
+            <img src="img/image-02.jpg" alt="Image" class="img-fluid">
+        </div>
+    </section>
+
+    <!-- 6th Section -->
+    <section class="row">
+        <div class="col-lg-12 tm-bg-color-gray tm-text-color-white tm-font-thin tm-form-footer">
+            <div class="row tm-container-inner">
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <div class="tm-footer-info-box">
+                        <h4>Lorem ipsum dolor</h4>
+                        <address>
+                            1010 Vivamaus viverra<br>
+                            Leo vel porttitor sodales<br>
+                            Non eleifend 10980
+                        </address>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+                    <div class="tm-footer-info-box">
+                        <p>
+                            Maecenas fermentum<br>
+                            Nam eu justo et urna<br>
+                            Semper maximus libero<br>
+                            Etiam magna quam
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <div class="row">
+        <div class="col-lg-12">
+            <p class="text-center small tm-copyright-text mb-0">Copyright &copy; <span class="tm-current-year">2018</span> Your Company Name | Designed by <a href="http://templatemo.com" class="tm-text-color-gray" target="_parent">Template Mo</a></p>
+        </div>
     </div>
-  
+</div>
