--- a/Ticketing/Views/Shared/_Layout.cshtml
+++ b/Ticketing/Views/Shared/_Layout.cshtml
@@ -3,6 +3,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link href="~/css/landing.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/libs/bootstrap/css/bootstrap.min.css">
     <title>@ViewBag.Title</title>
 </head>
 <body>
