--- a/Ticketing/Views/Home/Index.cshtml
+++ b/Ticketing/Views/Home/Index.cshtml
@@ -1,15 +1,16 @@
-﻿<div class="container">
+﻿@model IEnumerable<Ticketing.Core.Models.LandingPageModel>
+<div class="container">
 
     <!-- 1st section -->
     <section class="row tm-section">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 p-0">
             <div class="tm-flex-center p-5 tm-bg-color-primary tm-section-min-h">
-                <h1 class="tm-text-color-white tm-site-name">Magazee</h1>
+                <h1 class="tm-text-color-white tm-site-name">سامانه خدمات مشتری</h1>
             </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
             <div class="tm-flex-center p-5">
-                <q class="tm-quote tm-text-color-gray">Ut sit amet augue elit. Vivamus eget tortor in ante scelerisque gravida. Vestibulum auctor condimentum sem.</q>
+                <q class="tm-quote tm-text-color-gray">@Model.OrderBy(r => Guid.NewGuid()).Take(1)</q>
             </div>
         </div>
     </section>
@@ -19,8 +20,8 @@
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
             <div class="tm-flex-center p-5">
                 <div class="tm-md-flex-center">
-                    <h2 class="tm-text-color-primary mb-4">Fusce ac enim at justo</h2>
-                    <p class="mb-4">Pellentesque sagittis feugiat massa, vitae blandit elit dictum in. Nam eleifend nunc dui, sed cusus justo molestie id. Vestibulum vel sagittis justo.</p>
+                    <h2 class="tm-text-color-primary mb-4">رضایت مشتریان</h2>
+                    <p class="mb-4">@Model.OrderBy(r => Guid.NewGuid()).Take(1)</p>
                 </div>
             </div>
         </div>
