Add the ability to add sections to the landing page

--- a/Ticketing/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Ticketing/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -242,6 +242,18 @@
                                 افزودن بخش جدید 
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a asp-controller="LandingPage" asp-action="List" asp-area="Admin" class="nav-link">
+                                <i class="nav-icon far fa-calendar-alt"></i>
+                                بخش های صفحه اصلی
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-controller="LandingPage" asp-action="CreateLandingPageSections" asp-area="Admin" class="nav-link">
+                                <i class="nav-icon far fa-calendar-alt"></i>
+                                افزودن بخش های جدید به صفحه اصلی
+                            </a>
+                        </li>
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
