14021004-Action  Methods and  Authentication

--- a/Ticketing/Areas/Admin/Views/Section/_ModifySection.cshtml
+++ b/Ticketing/Areas/Admin/Views/Section/_ModifySection.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ModifySectionModel
-
+@Html.AntiForgeryToken()
 <input type="hidden" asp-for="Id" />
 <div class="card-body">
     <div asp-validation-summary="All"></div>
