--- a/Ticketing/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Ticketing/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -242,6 +242,12 @@
                                 افزودن بخش جدید 
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a asp-controller="Home" asp-action="logout" asp-area="" class="nav-link">
+                                <i class="nav-icon far fa-calendar-alt"></i>
+                                خروج  
+                            </a>
+                        </li>
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
