--- a/Ticketing/Views/Home/Index.cshtml
+++ b/Ticketing/Views/Home/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿
-    <div>
+    <div class="mb-2">
         Site Index
     </div>
+    <div>
+        <form asp-action="login" asp-controller="home" asp-area="" method="post">
+            <input  type="submit" value="Login" class="btn btn-primary"/>
+        </form>
+    </div>
+
   
