--- a/Ticketing/Views/Home/Index.cshtml
+++ b/Ticketing/Views/Home/Index.cshtml
@@ -7,5 +7,8 @@
             <input  type="submit" value="Login" class="btn btn-primary"/>
         </form>
     </div>
+    <div>
+    Shaparak API :  @ViewBag.ApiKey
+    </div>
 
   
